# hdx-scraper-climada

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: date-range-flood.yaml  publish-crop-production.yaml  publish-datasets.yaml  publish-earthquake.yaml  publish-flood.yaml  publish-litpop.yaml  publish-storm-europe.yaml  publish-tropical-cyclone.yaml  publish-wildfire.yaml  run-python-tests.yaml
config/: .coveragerc  .pylintrc
src/hdx_scraper_climada/: cli.py  climada_explorer.py  climada_interface.py  create_csv_files.py  create_datasets.py  data_explorer_notebook.ipynb  download_admin1_geometry.py  download_admin_geometries_from_hdx.py  download_from_hdx.py  download_gpw_population_map.py  download_gwp_population_map.py  explore_climada.py  jupyter_utilities.py  patched_litpop.py  patched_nightlight.py  run.py  utilities.py
src/hdx_scraper_climada/analysis/: data_explorer_notebook.ipynb  earthquake_explorer_notebook.ipynb  flood_explorer_notebook.ipynb
src/hdx_scraper_climada/metadata/: 2024-02-21-flood_metainfo-ex-em.csv  attributes.csv  countries.csv  documentation.md
src/hdx_scraper_climada/new-dataset-templates/: climada-litpop.json  climada.json
src/hdx_scraper_climada/quickcharts/: quickchart-crop-production.json  quickchart-earthquake.json  quickchart-flood.json  quickchart-litpop.json  quickchart-river-flood.json  quickchart-storm-europe.json  quickchart-tropical-cyclone.json  quickchart-wildfire.json
tests/: test_climada_explorer.py  test_climada_interface.py  test_create_csv_files.py  test_create_datasets.py  test_download_admin1_geometry.py  test_download_admin_geometry.py  test_utilities.py
tests/fixtures/: admin1-summaries-litpop.csv  haiti-admin1-litpop.csv
tests/fixtures/flood/: admin1-timeseries-summaries-flood.csv
